<resources>
    <string name="app_name">WoCare</string>
    <string name="splash">Don’t let periods stop you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="signin">Already have an account?</string>
    <string name="signup">Don\'t have an account?</string>
    <string name="text1">Effortlessly track your cycle for accurate</string>
    <string name="hint">*****</string>
    <string name="loading">Loading...</string>
    <string name="info2">Health for vital wellness cues</string>
    <string name="info1">predictions and better insights</string>
    <string name="start">Start Your Cycle!</string>
    <string name="next">Next</string>
    <string name="message">Message WoAsk...</string>
    <string name="woask1">WoAsk can only accept question in</string>
    <string name="whoask2">Indonesian language</string>
    <string name="today">Today</string>
    <string name="todo">TODO</string>
    <string name="capture">Capture a Photo!</string>
    <string name="tv1">Take a photo or upload a picture of menstrual</string>
    <string name="tv2">blood to assess your menstrual blood health</string>
    <string name="ok">OK</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="period_length">Period Length</string>
    <string name="cycle_length">Cycle Length</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="logout">Logout</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="insight">Insight</string>
    <string name="camera">Camera</string>
    <string name="woask">WoAsk</string>
    <string name="profile">Profile</string>
    <string name="january">January</string>
    <string name="topic">Topic</string>
    <string name="details">See Details</string>
    <string name="welcome">Welcome,</string>
    <string name="menstrual_health">Menstrual Health</string>
    <string name="reproductive_health">Reproductive Health</string>
    <string name="healthy_lifestyle">Healthy Lifestyle</string>
    <string name="defualt_web_client_id">38798188715-l8hh1bsh1td8k4s9u60f4a2hdkr1bvma.apps.googleusercontent.com</string>
    <string name="facebook_app_id">926516765572952</string>
    <string name="fb_login_protocol_scheme">f16f0e09cfc69d7b3fc96472c7384ba5</string>
    <string name="facebook_client_token">VzSiQcXRmi2kyjzcA+mYLEtbGVs=</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="done">Done</string>
    <string name="lets">Let\'s Start</string>
    <string name="username">Username</string>
    <string name="fb">Continue With Facebook</string>
    <string name="google">Continue With Google</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="date">Date</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="logout_info">Are you sure want to Logout ?</string>
    <string name="gynecologist">Gynecologist</string>
    <string name="our_doctors">Our Doctors</string>
    <string name="specialist_doctors">Specialist Doctors</string>
    <string name="consult_doctors">Consult Doctors</string>
    <string name="get_expert_advice_from">Get Expert Advice From</string>

    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>