<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:layout_marginStart="35dp"
    android:layout_marginEnd="35dp"
    android:background="@drawable/bg_white_rounded_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img1"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/capture"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_400"
        android:textSize="13sp"
        android:text="@string/tv1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_400"
        android:textSize="13sp"
        android:text="@string/tv2" />

    <Button
        android:id="@+id/okay"
        android:layout_width="150dp"
        android:layout_height="34dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_ok"
        android:gravity="center"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:backgroundTint="@color/main" />

</LinearLayout>