<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="40dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:layout_margin="30dp"
    android:background="@drawable/bg_white_rounded_2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_alert"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="Logout ?" />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_400"
        android:textSize="13sp"
        android:text="@string/logout_info" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="10dp"
            android:paddingEnd="30dp"
            android:paddingBottom="10dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="30dp"
            android:layout_height="1dp"/>

        <TextView
            android:layout_weight="1"
            android:background="@drawable/bg_white_rounded_4"
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/logout"
            android:textColor="@color/main"
            android:textSize="15sp" />


    </LinearLayout>

</LinearLayout>