<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".registerFragments.Step1Fragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/barProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/_1" />

            <TextView
                android:id="@+id/tvPertanyaan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvIsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edUsername"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_grey"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_400"
                android:textSize="12sp"
                android:layout_marginTop="50dp"
                android:autofillHints="" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="btnNext"
            app:barrierDirection="top" />

        <RelativeLayout
            android:id="@+id/btnNext"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintTop_toBottomOf="@+id/barrier"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>