<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/teal"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rika Amelia"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/notif"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/outline_notifications_24" />

        <TextView
            android:id="@+id/btnMonth"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/notif"
            android:layout_toEndOf="@+id/linearLayout3"
            android:drawablePadding="5dp"
            android:gravity="center_vertical|end"
            android:text="@string/january"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:drawableEndCompat="@drawable/baseline_calendar_24" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="rl1,rl,btnDate"
        app:barrierDirection="bottom" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/botnavbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/botnavbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu_navbar"
        app:itemPaddingTop="5dp"
        app:itemPaddingBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/btnDate"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/barrier">

        <LinearLayout
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_main_rounded"
            android:orientation="horizontal"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/showMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_white_rounded_2"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/month"
                android:textColor="@color/main"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/showYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:includeFontPadding="false"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/today"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>